k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: moss-work
  labels:
    istio-injection: enabled
