k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexmoss
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      serviceAccountName: alexmoss
      automountServiceAccountToken: false
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
      containers:
        - name: alexmoss
          image: alexmoss:SET_BY_CI
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9146
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - mountPath: /data/caddy
              name: cache-volume
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
              ephemeral-storage: 50Mi
            limits:
              memory: 50Mi
              ephemeral-storage: 50Mi
          imagePullPolicy: Always
      volumes:
        - name: cache-volume
          emptyDir: {}
      restartPolicy: Always
