k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moss-work
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
