k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alexmoss-co-uk
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: alexmoss-co-uk-tls
      hosts:
        - alexmoss.co.uk
        - www.alexmoss.co.uk
  rules:
    - host: alexmoss.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexmoss-co-uk
                port:
                  name: http
