k8s/moss.work-frontend.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mw-prod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mw-frontend
  labels:
    name: mw-frontend
  namespace: mw-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: mw-frontend
        version: v1
    spec:
      containers:
      - name: mw-frontend
        image: eu.gcr.io/moss-work/moss.work-frontend:${IMAGE_VERSION}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mw-frontend-svc
  namespace: mw-prod
  labels:
    name: mw-frontend-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  selector:
    name: mw-frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    name: nginx-ingress
  namespace: mw-prod
spec:
  backend:
    serviceName: mw-frontend-svc
    servicePort: 80
